<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_card_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.thinknick.bscapp.Activities.Card_Activity"
                android:background="@color/bscAppBackgroundColor"
    >

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <Button
        android:text="@string/log_ud"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_width="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/bscAppPrimaryTextColor"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:padding="32dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/velkommen_til"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView3"
            android:textSize="36sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="32dp"
            android:textColor="@color/bscAppSecondaryTextColor"/>

        <Button
            android:id="@+id/sButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/se_dit_nuværende_kort"
            android:clickable="true"
            android:padding="16dp"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/bscAppPrimaryTextColor" />

        <Button android:id="@+id/cardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/se_dit_modtaget_kort"
                android:clickable="true"
                android:padding="16dp"
                android:textSize="18sp"
            android:textColor="@color/bscAppPrimaryTextColor"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="7dp"
            android:elevation="0dp"
            android:layout_marginTop="50px" />

    </LinearLayout>

</RelativeLayout>
